--- a/mat218.md
+++ b/mat218.md
@@ -1,7 +1,7 @@
 MAT-218
 =======
 
-*Topics/tags: [Miscellaneous](index-misc)*
+*Topics/tags: [Miscellaneous](index-misc), silly, short*
 
 The other day, I was writing about Grinnell's MAT-218, a variable-topic
 course that we generally refer to as "Discrete bridges to advanced
@@ -11,17 +11,17 @@ Pig Absorbent Mats.
 
 [<img src="images/MAT218" width="75%" alt="A Google advertisement that begins 'MAT218 New Pig Absorbent Mats | Buy PIG Absorbent Traffic Mat'">](https://catalog.grinnell.edu/preview_course.php?catoid=20&coid=44228)
 
-As you can tell, I couldn't resist writing about that result.
+I could not resist writing about that result.
 
 My initial read of the advertisement was that the mats are designed for
 swine and that I got the ad because, well, I live in Iowa.  I even thought
 about jokes involving the mats absorbing pigs, rather than the mud
-from pigs.  But it appears that the pig mat is a disposable industrial
+from pigs.  However, it appears that the pig mat is a disposable industrial
 mat that you put on concrete and other floors to help keep them clean.
 It even handles forklift traffic!
 
 Still, I'm left to wonder about the relationships between foot traffic,
-on one hand, and graphs or number theory, on the other.
+on the one hand, and graphs or number theory, on the other.
 
 ---
 
@@ -29,4 +29,4 @@ on one hand, and graphs or number theory, on the other.
 
 ---
 
-*Version 0.9 of 2018-11-20.*
+*Version 1.0 of 2018-12-02.*
