--- a/idiot-2019-01-13.md
+++ b/idiot-2019-01-13.md
@@ -11,7 +11,7 @@ When I got there and started to park, I said to myself, "It's much better
 to be facing forward out of a space" and decided to plow over the hump
 of snow at the end of the space.  Unfortunately, the hump of snow 
 obscured one of those short concrete barriers they use to mark the 
-ends of spaces and I went right over [2].  Of course, the hump put my
+ends of spaces, and I went right over [2].  Of course, the hump put my
 car high enough that, with the snow, I did not have enough traction
 to back up over it.
 
@@ -30,4 +30,4 @@ barriers
 
 ---
 
-*Verison 0.9 of 2019-01-13.*
+*Version 1.0 of 2019-01-13.*
