--- a/afk-2019-01-12.md
+++ b/afk-2019-01-12.md
@@ -5,26 +5,29 @@ AFK
 
 I did not post a musing yesterday.  There's a reason for that.  I decided
 to spend the day AFK (Away from Keyboard).  I read no email.  I did no
-programming.  I visited no social media sites.
+programming.  I visited no social media sites.  I did no class prep
+on the computer.
 
 Instead, I went to a swim meet, made [stupid choices](idiot-2019-01-13),
-read a book, took a nap, and spent time with the family.  It was a nice
-day.
+read a book, took a nap, and spent time with the family.  It was a
+pleasant day.
 
-I paid for it.  I spent an hour this morning cleaning out my inbox [1].
-I feel even more behind on my class prep and other activities.  I didn't
-prepare anything for the SIGCAS pre-SIGCSE workshop.
+I paid for it.  I spent an hour and a half this morning cleaning out my
+inbox [1].  I feel even more behind on my class prep and other activities.
+I didn't prepare anything for the SIGCAS pre-SIGCSE workshop [2].
 
-But it was worth it.  It was nice to have a quiet day [2].  I hope I can
+But it was worth it.  It was nice to have a quiet day [3].  I hope I can
 find time for another AFK day sometime soon.
 
 ---
 
 [1] Back to inbox zero!
 
-[2] The drive to the swim meet in snow wasn't all that quiet.  But
+[2] I'm probably doing too much at SIGCSE as it is.
+
+[3] The drive to the swim meet in the snow wasn't all that quiet.  But
 other than that, it was quiet.
 
 ----
 
-*Version 0.9 of 2019-01-13.*
+*Version 1.0 of 2019-01-13.*
