--- a/return-2019-07-01.md
+++ b/return-2019-07-01.md
@@ -3,15 +3,15 @@ I'm back (I think)
 
 *Topics/tags: [Meta](index-meta), short*
 
-As some have noted, I did not musing or ranting during spring semester.
-Let me clarify; I have not been *writing* or *posting* musings or
-rantings during spring semester.  Anyone who has talked to me at a
-faculty meeting knows that I continued to rant; I few people know that
-I also mused internally one a wide variety of issues.
+As some have noted, I did not muse or rant during spring semester.
+Let me clarify; I did not *write* or *post* musings or rantings during
+spring semester.  Anyone who has talked to me at a faculty meeting knows
+that I continued to rant; a few people know that I also mused internally
+one a wide variety of issues.
 
-Why didn't I write?  It wass mostly an issue of time.  I was teaching
+Why didn't I write?  It was mostly an issue of time.  I was teaching
 two heavily revamped courses during spring semester semester, neither
-of which was really prepared before the semester started.  I think
+of which was really ready to go before the semester started.  I think
 I averaged between two and three new readings to write each week, and
 between two and three corresponding labs [1].  Many homework assignments,
 particularly those for CSC 151, take a significant amount of time to
@@ -26,10 +26,10 @@ So I couldn't really spare the hour each night to write; writing time
 needed to be spent on my classes [4].
 
 Somewhere in the middle of the semester, I started to write a "still on
-hiatus" post.  Why?  A number events me that I shouldn't have left the
-musings behind.  A new colleague dropped me a note saying "Thanks for
-writing about preregistration; it was helpful."  Surprisingly enough, our
-director of institutional research thanked me for the historical piece
+hiatus" post.  Why?  A number events suggests to me that I shouldn't have
+left the musings behind.  A new colleague dropped me a note saying "Thanks
+for writing about preregistration; it was helpful."  Surprisingly enough,
+our director of institutional research thanked me for the historical piece
 on end of course evaluations.  In class, a student said something like
 "I hear that you wrote a 'blog post about dining services.  Tell me more"
 [5,6].  A student I didn't know told me they appreciated that same post.
@@ -44,13 +44,13 @@ now I'm now ensconced [8] in my new office and ready to start again.
 
 I'm sad that I wasn't able to write some of the musings I had planned for
 spring semester.  I did not have the time for my regular reflection on
-preregistration [9] the long-promised reflection [10] on end-of-course
+preregistration [9] or the long-promised reflection [10] on end-of-course
 evaluations [11].  I neglected to write something about our wonderful
-graduating seniors.  I also feel bad that I have not mused about
-a newly-degreed colleague; that's on my agenda.  I had also hoped to
-write about the wonder that was _Salt Marsh Suite_; I haven't been so
-moved by a performance in some time.  I attended four performances;
-I wish I'd been able to make it to more.
+graduating seniors.  I also feel bad that I have not mused about a
+colleague who just received her Ph.D.; that's on my agenda.  I had
+also hoped to write about the wonder that was _Salt Marsh Suite_; I
+haven't been so moved by a performance in some time.  I attended four
+performances; I wish I'd been able to make it to more.
 
 But I feel like I'm ready to resume writing.  I've missed it.  I know I
 had a large backlog of topics.  However, it seems like I"m better off
@@ -65,7 +65,7 @@ to my long list of potential musings.
 
 [2] Writing unit tests for the CSC 207 exams also took a lot of
 time. I tried to give students relatively comprehensive tests and
-a reasonable amount of supporting code, which also consumesd time.
+a reasonable amount of supporting code, which also consumed time.
 
 [3] This semester, SIGCSE Volunteer Coordination took some time, as
 did some SIGCAS responsibilities.  After that, I spent effort on Tapia
@@ -109,4 +109,4 @@ positive.
 
 *Original version (entitled "Still on Hiatus") drafted 2019-04-27.*
 
-*Version 0.9 of 2019-07-01.*
+*Version 1.0 of 2019-07-01.*
