--- a/mom-2019-07-20.md
+++ b/mom-2019-07-20.md
@@ -8,17 +8,17 @@ ago today, on 20 July 2009 [1].  It's hard to believe that a decade has
 passed.  It certainly doesn't feel like it.  I still miss her.  A lot.
 A day rarely passes that I don't encounter something she would have
 appreciated, most typically, something the kids have done or plan to
-do.
+do [2].
 
 I struggled to figure out what to write today.  I've already written
 [a tribute, of sorts](mom).  I thought about writing about how she
 might have reacted to the past decade of politics, from the actions 
-and attitudes of the Trump administration [2] to the Obama administration's
-betrayal of progressivism [3,4].  But I try to keep my musings
-comparatively non-political [5,6].  I thought about writing about the
+and attitudes of the Trump administration [3] to the Obama administration's
+betrayal of progressivism [4,5].  But I try to keep my musings
+comparatively non-political [6,7].  I thought about writing about the
 time near her death, perhaps going backward from Michelle answering
 the phone in the middle of the night.  It would certainly be an
-opportunity to vent my frustrations at the Mayflower [7].  But it would
+opportunity to vent my frustrations at the Mayflower [8].  But it would
 just make me cry, and probably make me even angrier.
 
 Then I recalled a text that I got from middle son a month or so ago.
@@ -31,12 +31,12 @@ women's voicelessness, a possible answer is the one given by Eli
 Newberger, a major advocate for children, who said, in response to the
 question of how we can stop the epidemic of child abuse, "We must
 dismantle the patriarchy."  Freda Rebelsky offers a provocative rejoinder:
-"No, I think we need to mantle the matriarchy." [8]
+"No, I think we need to mantle the matriarchy." [9]
 
 But he didn't stop there; he'd found a variety of other things and sent
 me links to some of them.  For example, he'd found [an interview with
 her on WGBH](https://americanarchive.org/catalog/cpb-aacip_15-32d7wxj5)
-[9].  It was nice to listen to part of it, even though it's strange to
+[10].  It was nice to listen to part of it, even though it's strange to
 hear her voice from so long ago.  I'd forgotten that she was president
 of the Massachusetts Children's Lobby.
 
@@ -56,7 +56,7 @@ the one that inspired my musing about [busses and bussing](busses-bussing).
 And maybe that's a good way to think about mom today: She was someone
 who loved language, from her "provocative rejoinder" to her playing
 with words in her "pro-bussing" poem.  And, of course, I'll always
-remember my favorite "provocative rejoinder": When a _Time_ [9] reporter
+remember my favorite "provocative rejoinder": When a _Time_ [10] reporter
 was interviewing her about John Silber and said something like "But isn't
 he a genius?", mom responded with "He may be, but so was Ezra Pound."
 
@@ -75,30 +75,33 @@ during sabbatical" list.
 [1] I'm 99% sure that it was July 20.  I should set up a calendar of
 important dates like the one mom used to keep in the upstairs bathroom.
 
-[2] Way too many to list.
+[2] I really wish that my kids could have at least one living grandparent
+to express pride in them.
 
-[3] I can't remember the exact situation, but I recall Howard Zinn
+[3] Way too many to list.
+
+[4] I can't remember the exact situation, but I recall Howard Zinn
 running a roundtable objecting to some action of the administration;
 probably something having to do with our bellicostic relations with some
 other country.
 
-[4] Others might object to the way a constitutional attorney approached
+[5] Others might object to the way a constitutional attorney approached
 constitutional issues.
 
-[5] No, really.
+[6] No, really.
 
-[6] Sorry, mom.
+[7] Sorry, mom.
 
-[7] I'm not sure that I'll ever be able to forgive them for their
+[8] I'm not sure that I'll ever be able to forgive them for their
 role in what happened.
 
-[8] Bolker, Joan L. 1997. "A Room of One's Own Is Not Enough".  In Bolker, Joan (ed.) 1997.  _The Writer's Home Companion_ p. 198.  Found online at
+[9] Bolker, Joan L. 1997. "A Room of One's Own Is Not Enough".  In Bolker, Joan (ed.) 1997.  _The Writer's Home Companion_ p. 198.  Found online at
 <https://archive.org/details/writershomecompa00bolk/page/198>.
 
-[9] Their spelling of her name on the archive of public broadcasting
+[10] Their spelling of her name on the archive of public broadcasting
 is a bit strange: "Freeda Rebelski".
 
-[10] Or maybe _Newsweek_.
+[11] Or maybe _Newsweek_.
 
 ---
 
