--- a/cs-blurb-2019-07-22.md
+++ b/cs-blurb-2019-07-22.md
@@ -14,15 +14,23 @@ one for us.  Here's what they came up with.
 
 > Practical, theoretical, comprehensive, and rigorous
 
-> Whether you want to study programming languages, hardware design, operating systems, or more, the computer science major will teach you the fundamentals and the theory. You’ll learn all aspects of the design and use of computers through engaging, innovative teaching in outstanding facilities. Have a special project in mind? You’ll have plenty of opportunities for independent research guided by our expert faculty. And you’ll be thoroughly prepared for graduate study or a career in network and database administration, systems analysis, computer science, technical roles, and independent contracting.
+> Whether you want to study programming languages, hardware design,
+operating systems, or more, the computer science major will teach you
+the fundamentals and the theory. You’ll learn all aspects of the
+design and use of computers through engaging, innovative teaching in
+outstanding facilities. Have a special project in mind? You’ll have
+plenty of opportunities for independent research guided by our expert
+faculty. And you’ll be thoroughly prepared for graduate study or
+a career in network and database administration, systems analysis,
+computer science, technical roles, and independent contracting.
 
 One of my colleagues did not respond positively, to put it nicely.
-Why not?  Well, we don't really do hardware and don't talk about the
-design of computers [3].  Our facilities are good, but it's a stretch
-to call them "outstanding" [4].  We shouldn't advertise a willingness to
+Why not?  Well, we don't really do hardware, and we don't talk about the
+design of computers [3,4].  Our facilities are good, but it's a stretch
+to call them "outstanding" [5].  We shouldn't advertise a willingness to
 supervise special projects that students have in mind.  We support a lot
 of student-faculty research, but most of it is either (a) grounded in a
-faculty member's primary research area or (b) related to a course [5].
+faculty member's primary research area or (b) related to a course [6].
 My colleague also objected to "network and database administration", since
 it's not a career that we target or that many of our students pursue.
 
@@ -30,9 +38,9 @@ Do I blame Communications for these issues?  Nope.  We didn't do our
 job in writing the blurb and we did not communicate our department's
 strengths to them.  It seems to me that Communications also has not
 gotten appropriate support from the Dean's office on the "Opportunities
-for all students to do research" initiative [6]. Ideally, we would have a
+for all students to do research" initiative [7]. Ideally, we would have a
 blurb describing those opportunities for each department.  After all,
-we had to write those descriptions two years ago [7,8].
+departments had to write those descriptions two years ago [8,9].
 
 Communications also did some nice things.  I particularly appreciate
 the four-word summary: _Practical, theoretical, comprehensive, and
@@ -42,23 +50,23 @@ core strengths.
 
 At this point, it's the department's responsibility to come up with
 something better.  I cleverly volunteered to draft the first response
-[9,10].  It ended up on my back burner, but it's time to get something
-done.  And there's nothing like musing to help.  So, here goes [12].
+[10,11].  It ended up on my back burner, but it's time to get something
+done.  And there's nothing like musing to help.  So, here goes [14].
 
 What does our [current blurb](https://www.grinnell.edu/academics/majors-concentrations/computer-science) say?
 
-> Computer science study at Grinnell is innovative — you experience varied pedagogical and problem-solving approaches. It’s comprehensive, involving several programming languages and a balance of theory and application. It’s thorough — guided by national curricular guidelines and taught in dedicated facilities. It offers extensive opportunities for student-faculty research, and can prepare you for further study or careers in network and database administration, systems analysis, computer science, technical roles, and independent contracting. [14]
+> Computer science study at Grinnell is innovative — you experience varied pedagogical and problem-solving approaches. It’s comprehensive, involving several programming languages and a balance of theory and application. It’s thorough — guided by national curricular guidelines and taught in dedicated facilities. It offers extensive opportunities for student-faculty research, and can prepare you for further study or careers in network and database administration, systems analysis, computer science, technical roles, and independent contracting. [15]
 
-Yeah, I can see where they might want to rewrite it.  I also see where
+Yeah, I can see where Communications might want to rewrite it.  I also see where
 they got the four words.  And it has the network and database administration
 part.  So, what can I do?  I'll start by reflecting on some strengths.
 
-* We have an innovative curriculum, based on three core approaches:
+* An innovative curriculum, based on three core approaches:
   active learning in most courses, a multi-paradigm introductory
   sequence, and research experiences in the upper-level courses 
-  [17].
+  [18].
 * A curriculum that is acknowledged as an exemplar in the IEEE/ACM
-  Curricula guidelines [18].
+  Curricula guidelines [19].
 * A variety of experiences for "outside of classroom" learning, including
   not just MAPs, but also student-driven activities like AppDev or the
   VR club.
@@ -98,7 +106,7 @@ in computing, from app development to consulting, from management to
 computer animation, from data science to data management, others are
 equally comfortable applying those skills to very different careers.
 
-Do I want to list some of those other careers? There are many I'm just
+Do I want to list some of those other careers? There are many. I'm just
 as proud of our graduates who have gone on to be teachers, comedians,
 fundraisers, mathematicians, stay-at-home parents, and so on and so forth.
 But I probably shouldn't add those; the paragraph is too long already.
@@ -120,58 +128,62 @@ which is getting more and more intimidating the more musings I write [2].
 [3] It's questionable whether or not we talk about the "use" of computers,
 either.
 
-[4] We've had at least one prospective student write us and ask something
-like "Your computers aren't really as old as they look in the photos,
-are they?"  And no, they are not.  But it looks like we're sticking with
-a one-monitor-per-workstation setup for the near future, and we don't need
-particularly fancy setups for our primary teaching.
+[4] I suppose we talk about the design of computers in our course in
+organization and architecture.  But it's not the focus of
+our curriculum.
 
-[5] The range of projects from Weinman's recent course in Computer Vision
+[5] We've had at least one prospective student write to us and ask
+something like, "Your computers aren't as old as they look in the photos,
+are they?"  And no, they are not.  But it looks like we're sticking with
+a one-monitor-per-workstation set up for the near future, and we don't
+need particularly fancy machines or monitors for our primary teaching.
+
+[6] The range of projects from Weinman's recent course in Computer Vision
 is astounding.  So, in some sense, students got to pick a "passion project"
 of sorts.  But it was restricted to something related to computer vision.
 
-[6] That's right Sam. Pass the blame.
+[7] That's right, Sam. Pass the blame.
 
-[7] My preference would be that the general aspects of each department's
+[8] My preference would be that the general aspects of each department's
 research opportunities appear in the College Catalog, as our requirements
 for honors do.
 
-[8] I believe that one of the Associate Deans plans to work on this issue.
+[9] I believe that one of the Associate Deans plans to work on this issue.
 Thanks!
 
-[9] Yes, I realize that I'm on leave.  But no one else volunteered and
+[10] Yes, I realize that I'm on leave.  But no one else volunteered, and
 our Chair has way too much on his plate.
 
-[10] Our Chair and I also seem to have a relatively good writing
-relationship in which I draft something and he cleans it up.  I feel
-like I often develop that relationship with folks [11].
+[11] Our Chair and I also seem to have a relatively good writing
+relationship in which I draft something, and he cleans it up.  I feel
+like I often develop that relationship with folks [12].
 
-[11] That was clearly the relationship that Janet and I had in writing
+[12] That was also the relationship that Janet and I had in writing
 the CSC 151 materials.  I do not envy her work in checking my accuracy
 and reframing my thinking.
 
-[12] That may be one of the longest introductions I've written, particularly
-with regards to ration of the length of the introduction to the length of
+[14] That may be one of the longest introductions I've written, particularly
+with regards to ratio of the length of the introduction to the length of
 the piece of writing.  And I have more to write before I write, as it were.
 
-[14] Grinnell College.  n.d.  Computer Science.  Web page available at
+[15] Grinnell College.  n.d.  Computer Science.  Web page available at
 <https://www.grinnell.edu/academics/majors-concentrations/computer-science>.
-Visited 22 July 2019.  Last modified 22 July 2019 [15,16].
+Visited 22 July 2019.  Last modified 22 July 2019 [16,17].
 
-[15] At least that's what the page info says.  I wonder if, under Drupal, 
+[16] At least that's what the page info says.  I wonder if, under Drupal, 
 the page modification date ends up being the time you view the page.
 
-[16] It seems odd to refer to that page for the text, given that I anticipate
+[17] It seems odd to refer to that page for the text, given that I anticipate
 that the page will change.  I would be tempted to refer to the [Wayback Machine](https://web.archive.org/) URL, <https://web.archive.org/web/20190207020321/https://www.grinnell.edu/academics/majors-concentrations/computer-science>, but
 that version is strangely formatted.
 
-[17] That last bit is not all that innovative, but it's an important
+[18] That last bit is not all that innovative, but it's a valuable
 part of our curriculum.
 
-[18] I know that this characteristic is one of the reasons we were able
-to attract one of my favorite students, even though they had originally
+[19] I know that this characteristic is one of the reasons we were able
+to attract one of my favorite students, even though they had initially
 decided not to attend Grinnell.
 
 ---
 
-*Version 0.1 of 2019-07-22.*
+*Version 1.0 of 2019-07-22.*
