--- a/csc151-2019-08-27.md
+++ b/csc151-2019-08-27.md
@@ -3,9 +3,9 @@ How do I get into CSC 151?
 
 *Topics/tags: [CSC 151](index-csc151), academia, advice for current students*.
 
-This week, first year students on preparing to register for classes.  I
-think I've written about [first-year registration](registration-first-year) 
-before.  I may not have mentioned that many students stop by to discuss
+This week, first-year students are preparing to register for classes.
+I've written about [first-year registration](registration-first-year)
+before.  I may not have mentioned that many students need to discuss
 their placement as they plan their prospective schedules.  Math has the
 most visits, but CS has a bunch, too.
 
@@ -14,7 +14,7 @@ in the CS curriculum.  Although they had taken prior CS classes, they
 understood that the design of Grinnell's curriculum is such that it
 makes sense to start in 151.  Then they said "I'm worried about 151."
 I prepared to reassure them that although CSC 151 has a reputation as
-a challenging class, even for students with prior background, nearly
+a challenging class, even for students with some background, nearly
 everyone who takes the course does well.
 
 But that wasn't their worry.
@@ -27,20 +27,20 @@ it's easy to get into 151 in your first semester.  I thought it would
 be worthwhile to document the advice I gave.  Let's see ....
 
 *You probably won't get into CSC 151 in the fall unless you make it your
-first choice in the first round* [2].  I'm pretty sure I've said that for
-the past few years.  Last year, CSC 151 filled midway through the first
-round.  I think we have a few more slots available this year, but it's
-unlikely we'll make it to the second round.
+first choice in the first round* [2].  I'm pretty sure I've said that to
+students for the past few years.  Last year, CSC 151 filled midway through
+the first round.  I think we have a few more slots available this year,
+but it's unlikely that slots will be available in the second round.
 
 *Every first-year student who wants to take CSC 151 will get it in spring
 if they don't get it in the fall.*  I realize that some of our peer
-institutions have reached the stage that the don't guarantee every
-interested first-year student enrollment in CS.  I would raise a ruckus
-if we reached did not provide the course to all interested first-year
-students [3].  We had no trouble meeting that goal last year, and we
-have one more section this year.
+institutions have reached the stage that they don't guarantee that every
+interested first-year student can enroll in CS.  I would raise a ruckus
+if we reached the stage that did not provide the course to all interested
+first-year students [3].  We had no trouble meeting that goal last year,
+and we are offering one more section this year.
 
-*It doesn't matter if you start the CS major your first semester or your
+*It doesn't matter if you start the CS major in your first semester or your
 second semester.*  We've tried to design the curriculum so that it's
 relatively straightforward to complete the CS major in six semesters.
 That means that you can start in your second semester, study abroad
@@ -91,4 +91,4 @@ abroad.
 
 ---
 
-*Version 0.1 of 2019-01-27.*
+*Version 1.0 of 2019-01-27.*
