--- a/new-dean-2019-08-28.md
+++ b/new-dean-2019-08-28.md
@@ -18,7 +18,7 @@ program are the ones I recall).  The Centers announced their programs [3].
 One thing was different this year: We have a new Dean, Anne Harris,
 who introduced herself and gave her vision for liberal arts education
 and for Grinnell.  I've only had a few interactions with Dean Harris
-so far [4], and I appreciated the opportunity to hear more from her.
+so far [4], so I appreciated the opportunity to hear more from her.
 Her speech suggested to me that we are lucky to have found her.
 She's clearly thoughtful, articulate, funny, and collaborative [5].
 
@@ -30,13 +30,13 @@ form "Education is the new civil rights movement".  I appreciated even
 more that she found ways to incorporate critical thinking, inclusion,
 and policy change in her discussions of those quotations.
 
-Dean Harris is an art historian and a medievalist, and found a variety
+Dean Harris is an art historian and a medievalist; she found a variety
 of ways to bring those aspects of her worldview into the presentation.
-I particularly appreciated her careful use of a painting of the Tower
+I particularly enjoyed her careful use of a painting of the Tower
 of Babel by Peter Bruegel the Elder [6] and the careful ways she brought
 different parts of the piece into her talk.
 
-I also appreciated her discussion of the books she'd
+I also found it useful to hear  her discuss of the books she'd
 been reading with faculty and staff since coming to
 Grinnell.  I'm not sure that I was able to record the
 whole list, but they include Kathleen Fitzpatrick's [_Generous
@@ -57,7 +57,7 @@ Scandal_](https://smile.amazon.com/College-Dropout-Scandal-David-Kirp/dp/0190862
 
 It's useful to hear what books are currently shaping the Dean's
 thinking about higher education and to hear her takes on these
-books.  I wonder if she'll be reading other books that faculty and
+books.  I wonder if she'll also be reading other books that faculty and
 staff are discussing, including Anthony Abraham Jack's [_The Privileged
 Poor_](https://smile.amazon.com/Privileged-Poor-Colleges-Disadvantaged-Students/dp/0674976894/)
 and Kate Mann's [_Down
@@ -73,14 +73,28 @@ the following:
 knowledge and process that are not easily explained but are nonetheless
 transformative.
 
-I hope that perspective will be incorporated into assessment of the
-College.  I continue to worry about our attempts to measure important
-things that are not naturally measurable.
+I hope that perspective will be incorporated into whatever we end up
+doing for assessment at the College.  I continue to worry about our
+attempts to measure important things that are not naturally measurable.
 
 In any case, it was a wonderful opening statement.  As I said, I
 appreciate many parts of it, and I particularly appreciate her enthusiasm
 for being a part of this wonderful institution.  I look forward to seeing
 how Grinnell evolves under Dean Harris' watch.
+
+---
+
+Postscript: This musing contains more reporting and less reflection than
+normal.  Or at least I think it does.    Oh well, that's how it goes 
+sometimes.
+
+---
+
+Postscript: I went to campus ready to rant about a variety of things
+(not to the Dean; just here).  I'm frustrated about the _Faculty 
+Handbook_, about our new computer use policies, and about
+[pioneers.grinnell.edu](pioneers-dot-grinnell-dot-ads).  So it was
+nice to have a faculty meeting that put me in a good mood.
 
 ---
 
@@ -98,7 +112,7 @@ applause is sincere.
 
 [4] All positive.
 
-[5] This last characteristic is harder to measure from a speech; but
+[5] This last characteristic is harder to measure from a speech. Still,
 her attitude was clearly one of collaboration.
 
 [6] For the art historians among you, it's the version normally referred
@@ -114,4 +128,4 @@ for this year [8].
 
 ---
 
-*Version 0.1 of 2019-08-28.*
+*Version 1.0 of 2019-08-28.*
