Add source to quotation in musing about new dean.

--- a/new-dean-2019-08-28.md
+++ b/new-dean-2019-08-28.md
@@ -26,14 +26,14 @@ She chose two interesting quotations to open her vision statement and
 provided commentary and interpretation of each.  The first was from John
 Dewey, approximately, "Democracy is reborn with each generation and
 education is its midwife."  The second was much more recent and took the
-form "Education is the new civil rights movement".  I appreciated even
+form "Education is the new civil rights movement" [6].  I appreciated even
 more that she found ways to incorporate critical thinking, inclusion,
 and policy change in her discussions of those quotations.
 
 Dean Harris is an art historian and a medievalist; she found a variety
 of ways to bring those aspects of her worldview into the presentation.
 I particularly enjoyed her careful use of a painting of the Tower
-of Babel by Peter Bruegel the Elder [6] and the careful ways she brought
+of Babel by Peter Bruegel the Elder [7] and the careful ways she brought
 different parts of the piece into her talk.
 
 I also found it useful to hear  her discuss of the books she'd
@@ -43,7 +43,7 @@ whole list, but they include Kathleen Fitzpatrick's [_Generous
 Thinking_](https://smile.amazon.com/Generous-Thinking-Radical-Approach-University/dp/1421429462/),
 Cristina Henriquez' [_The Book of Unknown
 Americans_](https://smile.amazon.com/Book-Americans-Cristina-Henr%C3%ADquez/dp/0345806409/)
-[7], John Palfrey's [_Safe Spaces, Brave
+[8], John Palfrey's [_Safe Spaces, Brave
 Spaces_](https://smile.amazon.com/Safe-Spaces-Brave-Diversity-Expression/dp/0262535963/),
 and the second edition of Terrell
 L. Strayhorn's [_College Students' Sense of
@@ -63,7 +63,7 @@ Poor_](https://smile.amazon.com/Privileged-Poor-Colleges-Disadvantaged-Students/
 and Kate Mann's [_Down
 Girl_](https://www.amazon.com/gp/product/0190604980/).
 
-I'm not going to attempt to replicate her whole speech [9].  The
+I'm not going to attempt to replicate her whole speech [10].  The
 quotations, the painting, and the book discussion were highlights
 for me.  However, I think my favorite part was a comment she made
 in discussing her background, which I recall as being something like
@@ -115,17 +115,23 @@ applause is sincere.
 [5] This last characteristic is harder to measure from a speech. Still,
 her attitude was clearly one of collaboration.
 
-[6] For the art historians among you, it's the version normally referred
+[6] I've now received a transcript of the speech.  The quotation is from
+Dolores Huerta and comes from a speech at NCORE (the National Conference
+on Race and Ethnicity in American Higher Education).
+
+[7] For the art historians among you, it's the version normally referred
 to as "The Great Tower of Babel".  Bruegel also painted two other
 versions, one of which appears to be lost.
 
-[7] _The Book of Unknown Americans_ is also Grinnell's common reading
-for this year [8].  
+[8] _The Book of Unknown Americans_ is also Grinnell's common reading
+for this year [9].  
 
-[8] Have I mused about the common reading yet?  I should.
+[9] Have I mused about the common reading yet?  I should.
 
-[9] Although I have asked her for a copy.
+[10] Although I have asked her for a copy.
 
 ---
 
-*Version 1.0 of 2019-08-28.*
+*Version 1.0 released 2019-08-28.*
+
+*Version 1.1 of 2019-09-01.*
