--- a/closures-2019-09-09.md
+++ b/closures-2019-09-09.md
@@ -4,7 +4,7 @@ Closures
 *Topics/tags: [The joy of code](index-joc), technical*
 
 Yesterday, I was [musing about new programming languages I might
-learn and how I might learn them](new-languages-2019-09-08).  Along
+learn and how I might learn them](new-languages-2019-09-09).  Along
 the way, I mentioned that I like to explore closures in the new
 functional languages I learn.  What's a closure?  Here's what
 [Wikipedia](https://en.wikipedia.org/wiki/Closure_(computer_programming))
@@ -215,6 +215,119 @@ Languages whether they consider the Python 2 version of closures
 
 ---
 
+Postscript: The day after I started drafting this musing, my colleague 
+Janet Davis posted a link to [this article on closures in JavaScript](https://medium.com/dailyjs/i-never-understood-javascript-closures-9663703368e8).
+Here's the code that the author, Olivier De Meulder, posted.
+
+```
+ 1: function createCounter() {
+ 2:   let counter = 0
+ 3:   const myFunction = function() {
+ 4:     counter = counter + 1
+ 5:     return counter
+ 6:   }
+ 7:   return myFunction
+ 8: }
+ 9: const increment = createCounter()
+10: const c1 = increment()
+11: const c2 = increment()
+12: const c3 = increment()
+13: console.log('example increment', c1, c2, c3)
+```
+
+It seems like counters are a fairly common approach to looking at
+closures.  However, I'm surprised that De Meulder doesn't create two
+counters make sure that the `counter` variable is not shared.  Let's
+give that a try.
+
+```
+function createCounter() {
+  var c = 0;
+  return function() {
+    return ++c;
+  }
+}
+
+const c1 = createCounter();
+const c2 = createCounter();
+
+console.log(c1(), c1(),  c1()); // 1 2 3
+console.log(c2(), c2());        // 1 2
+console.log(c1());              // 4
+console.log(c2());              // 3
+```
+
+For some reason, the Java IDE I tried wouldn't allow `let`, so I
+substituted `var`.  That seems to be working fine.  I also simplified
+things a bit.
+
+De Muelder goes on to write,
+
+> The closure contains all the variables that are in scope at the time of creation of the function. It is analogous to a backpack. A function definition comes with a little backpack. And in its pack it stores all the variables that were in scope at the time that the function definition was created.
+
+That's not quite true.  Since multiple functions can be declared (and
+returned) within another function, some of the variables will be shared.
+Here's an example with a single shared variable.
+
+```
+function dualCounter() {
+  var count = 0;
+  return [function() { return ++count; }, function() { return --count; }];
+}
+
+var [inc1,dec1] = dualCounter();
+var [inc2,dec2] = dualCounter();
+
+console.log(inc1(), inc1(), dec1(), inc1(), inc1()) // 1 2 1 2 3
+console.log(dec2(), dec2(), inc2(), inc2()) // -1 -2 -1 0
+```
+
+Now, this may seem to you like "they share the same backpack".  However,
+with a little work, we can probably come up with an example in which they 
+share one variable, but not another.  Here's a really stupid, and
+potentially confusing, example.
+
+```
+// Return a pair of factories associated with a single counter.  The
+// 2, then 3, then 4, and so on and so forth.
+function confuse() {
+  var counter = 0;
+  function incrementerFactory() {
+    var offset = 1;
+    return function() { counter += offset++; return counter; }
+  }
+  function decrementerFactory() {
+    var offset = 1;
+    return function() { counter -= offset++; return counter; }
+  } // decrementerFactory()
+  return [incrementerFactory, decrementerFactory];
+}
+
+var [if1,df1] = confuse();
+var [if2,df2] = confuse();
+var inc1 = if1();
+var dec1 = df1();
+var inc2 = if2();
+var dec2 = df2();
+
+console.log(inc1());    // 1 ; The inc offset for the first counter is now 2
+console.log(inc1());    // 3 ; The inc offset for the first counter is now 3
+console.log(inc1());    // 6 ; The inc offset for the first counter is now 4.
+// If the offset variable is shared, decrementing should give us 2.  If it's
+// not shared, decrementing should give us 5.
+console.log(dec1());    // 5
+// We've determined that offset is not shared between inc1() and dec1(),
+// but counter is.  What about the other pair?
+console.log(inc2());    // 1;
+// Nope; counter is not shared.
+```
+
+I don't think "backpack" covers this behavior very well.  I admit that
+it's not a behavior I need in many cases.  But it's still the behavior
+that the term "continuation" is supposed to imply.
+
+---
+
 [1] Would I really write code with side-effects in Racket?  Sure, when
 it seems appropriate.
 
@@ -242,6 +355,8 @@ stick with Hoare's spelling.
 
 >  C. A. R. Hoare. 1962. Quicksort. (Comput. J.* 5, 1, 10–16. doi:10.1093/comjnl/5.1.10 <http://comjnl.oxfordjournals.org/content/5/1/10.full.pdf>
 
+[8] 
+
 ---
 
-*Version 0.1 of 2019-09-08.*
+*Version 0.2 of 2019-09-08.*
